@@ -1,3 +1,4 @@
+Fixed: the ruler can be dragged off the canvas
 Fluid flow: Fixed: If the right hand pipe is fully expanded there is visual interference with the fluid density box.
 Fixed: the ruler is leaving "ghosting" litter on the screen
 Fluid flow: Constrain the pipe so it can't become too wide or thin to reduce dye misshaping problems
